--- a/index.html
+++ b/index.html
@@ -2061,7 +2061,7 @@
                             <div class="flex items-center gap-4 mb-4">
                                 <div class="text-5xl md:text-6xl">🏓</div>
                                 <div>
-                                    <h1 class="text-3xl md:text-4xl font-bold mb-1" style="letter-spacing: -1px;">Padel Tournament</h1>
+                                    <h1 class="text-3xl md:text-4xl font-bold mb-1" style="letter-spacing: -1px;">Stretford Padel Tournament</h1>
                                     <div class="text-sm text-gray-500 font-medium">Professional Match Manager</div>
                                 </div>
                             </div>
